# uart-web-bridge-firmware

./: .gitignore  .gitmodules  .releaserc  CMakeLists.txt  README.md  package-lock.json  package.json  sdkconfig
.github/workflows/: release.yml
main/: CMakeLists.txt  main.c  server.c  uart.c  wifi.c
main/include/: server.h  uart.h
